--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Pacifico&display=swap');
+
 * {
     padding: 0;
     margin: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-size: 24px;
 }
+/* nav */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.logo {
+    color: #F61D1D;
+    font-family: 'Dancing Script', cursive;
+    font-size: 48px;
+}
+
+.menu-item {
+    display: flex;
+}
+
+.menu-item li {
+    padding: 10px;
+}
+
+.menu-item li a {
+    color: #000;
+}
+
+.menu-item li .active {
+    color: #F61D1D;
+}
+
+/* end nav */
