--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ nav {
     color: #F61D1D;
     font-family: 'Dancing Script', cursive;
     font-size: 48px;
+    cursor: pointer;
 }
 
 .menu-item {
@@ -91,7 +92,6 @@ h1 {
 /* end content */
 
 /* footer */
-
 footer {
     width: 100%;
     display: flex;
@@ -104,8 +104,8 @@ footer {
 
 .cicle {
     margin: 10px;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-color: #fff;
     display: flex;
@@ -121,13 +121,44 @@ footer {
 i {
     padding: 10px;
     color: #039BE5;
+    cursor: pointer;
+}
+/* end footer */
+
+/* container edu */
+h1 {
+    margin-top: 40px;
+    text-align: center;
 }
 
+.row .main {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
 
+.side-text, .side-img {
+    width: 50%;
+    padding: 10px;
+}
 
+.side-text {
+    padding: 10px;
+}
 
+h2 {
+    text-align: center;
+    color: #F61D1D;
+    font-size: 48px;
+    margin-bottom: 30px;
+}
 
-
+.side-text p {
+    text-align: left;
+    line-height: 1.8;
+}
 
 
 
@@ -160,11 +191,31 @@ i {
         margin-left: 200px;
     }
 
+    .row .main {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .side-text,.side-img {
+        width: 90%;
+    }
+
+    h1 {
+        font-size: 48px;
+    }
+
+    h2 {
+        font-size: 36px;
+    }
+
+    p {
+        font-size: 18px;
+    }
 }
 
 @media screen and (max-width:615px) {
     * {
-        font-size: 18px;
+        font-size: 16px;
     }
 
     h1 {
@@ -191,7 +242,7 @@ i {
     }
 
     .menu-item li a {
-        font-size: 18px;
+        font-size: 16px;
     }
 
     .banner {
@@ -205,5 +256,26 @@ i {
     .content .text {
         margin: auto;
         width: 100%;
+    }
+
+    h1 {
+        font-size: 36px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    .row .main {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .side-text,.side-img {
+        width: 90%;
     }
 }
