--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,7 @@ i {
 
 /* container edu */
 h1 {
+    padding: 10px;
     margin-top: 40px;
     text-align: center;
 }
@@ -134,14 +135,18 @@ h1 {
 .row .main {
     margin-top: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     padding: 10px;
 }
 
 .side-text, .side-img {
-    width: 50%;
+    width: 40%;
     padding: 10px;
+}
+
+.side-img img {
+    width: 90%;
 }
 
 .side-text {
@@ -149,6 +154,7 @@ h1 {
 }
 
 h2 {
+    padding: 10px;
     text-align: center;
     color: #F61D1D;
     font-size: 48px;
@@ -159,6 +165,7 @@ h2 {
     text-align: left;
     line-height: 1.8;
 }
+/* end container edu */
 
 
 
@@ -175,9 +182,7 @@ h2 {
 
 
 
-
-
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1024px) {
     .content, .banner, .text {
         display: flex;
         flex-direction: column;
@@ -211,15 +216,20 @@ h2 {
     p {
         font-size: 18px;
     }
+
+    .container {
+        text-align: center;
+    }
+
+    .row .reverse {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
 
 @media screen and (max-width:615px) {
     * {
         font-size: 16px;
-    }
-
-    h1 {
-        font-size: 48px;
     }
 
     nav {
@@ -242,7 +252,7 @@ h2 {
     }
 
     .menu-item li a {
-        font-size: 16px;
+        font-size: 24px;
     }
 
     .banner {
@@ -268,6 +278,7 @@ h2 {
 
     p {
         font-size: 16px;
+        text-align: center;
     }
 
     .row .main {
@@ -277,5 +288,10 @@ h2 {
 
     .side-text,.side-img {
         width: 90%;
+    }
+
+    .row .reverse {
+        display: flex;
+        flex-direction: column-reverse;
     }
 }
