--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 22px;
     font-family: sans-serif;
 }
 /* nav */
@@ -50,40 +50,37 @@ span {
 .content {
     padding: 30px;
     display: flex;
+    justify-content: space-around;
     align-items: center;
 }
 
 .content .text {
-    width: 60%;
-    margin-right: 150px;
+    width: 40%;
     line-height: 1.7;
 }
 
 .btn {
-    cursor: pointer;
-    margin-right: 30px;
-    margin-top: 30px;
-    padding: 15px 40px;
-    border: 2px solid #000;
-    border-radius: 25px;
     background-color: #000;
+    padding: 10px 30px;
+    border: 1px solid #000;
+    color: #fff;
+    border-radius: 10px;
+    display: inline-block;
+    margin-right: 20px;
 }
 
 .no-bg {
     background-color: #fff;
-}
-
-.btn a {
-    color: #fff;
-}
-
-.no-bg a {
     color: #000;
 }
 
-.btn:hover,.btn a:hover {
+.btn:hover {
     background-color: #000;
     color: #fff;
+}
+
+.mt-3 {
+    margin-top: 30px;
 }
 
 h1 {
@@ -93,18 +90,13 @@ h1 {
     margin-top: 40px;
     text-align: center;
 }
-
-.content .banner, .text {
-    width: 50%;
-}
 /* end content */
 
 /* footer */
 footer {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: #039BE5;
     padding: 10px;
@@ -124,6 +116,19 @@ footer {
 .icons {
     margin-top: 10px;
     display: flex;
+    text-align: center;
+}
+
+.icons-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 i {
@@ -147,12 +152,12 @@ i {
 }
 
 .side-text, .side-img {
-    width: 40%;
+    width: 45%;
     padding: 10px;
 }
 
 .side-img img {
-    width: 90%;
+    width: 100%;
 }
 
 .side-text {
@@ -175,27 +180,24 @@ h2 {
 
 /* content about */
 .row-2 {
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.col {
-    padding: 10px;
-    width: 45%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 30px;
 }
 
 .card {
-    padding: 0;
-    width: 700px;
-    height: 600px;
-    border-radius: 10px;
-    border: 2px solid #000;
+    border-radius: 20px;
+    background-color: whitesmoke;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+    cursor: pointer;
+}
+
+.card-body {
+    padding: 50px;
 }
 
 .card img {
-    border-radius: 10px 10px 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 h3 {
@@ -205,37 +207,27 @@ h3 {
     font-size: 22px;
 }
 
-.card-body {
-    padding: 50px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Template */
 @media screen and (max-width:1024px) {
-    .content, .banner, .text {
+    .content {
+        padding: 10px;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
     }
 
-    .text {
+    .content .text p {
+        width: 100%;
+    }
+
+    .content .banner, .content .text {
+        width: 90%;
         text-align: center;
-        margin-top: 60px;
-        margin-left: 200px;
+        margin: auto;
+    }
+
+    .btn-group {
+        display: flex;
+        justify-content: center;
     }
 
     .row .main {
@@ -243,20 +235,24 @@ h3 {
         flex-direction: column;
     }
 
-    .side-text,.side-img {
-        width: 90%;
-    }
-
     h1 {
-        font-size: 48px;
+        font-size: 38px;
     }
 
     h2 {
-        font-size: 34px;
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 22px;
     }
 
     p {
-        font-size: 18px;
+        font-size: 20px;
+    }
+
+    span {
+        font-size: 48px;
     }
 
     .container {
@@ -280,8 +276,14 @@ h3 {
     .card {
         width: 100%;
     }
-}
 
+    footer {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+}
+/* Phone */
 @media screen and (max-width:615px) {
     * {
         font-size: 16px;
@@ -307,33 +309,34 @@ h3 {
     }
 
     .menu-item li a {
-        font-size: 24px;
-    }
-
-    .banner {
-        width: 60%;
-    }
-
-    .banner img {
-        width: 300px;
-    }
-
-    .content .text {
-        margin: auto;
-        width: 100%;
+        font-size: 20px;
     }
 
     h1 {
-        font-size: 36px;
+        font-size: 32px;
     }
 
     h2 {
-        font-size: 24px;
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 16px;
     }
 
     p {
         font-size: 16px;
         text-align: center;
+    }
+
+    span {
+        font-size: 32px;
+    }
+
+    .content .banner img {
+        width: 100%;
+        text-align: center;
+        margin: auto;
     }
 
     .row .main {
@@ -349,4 +352,6 @@ h3 {
         display: flex;
         flex-direction: column-reverse;
     }
+
+    
 }
