--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ h2 {
 }
 
 .card-body {
-    padding: 50px;
+    padding: 50px 20px;
 }
 
 .card img {
@@ -214,69 +214,66 @@ h3 {
         display: flex;
         flex-direction: column;
     }
-
     .content .text p {
         width: 100%;
     }
-
     .content .banner, .content .text {
         width: 90%;
         text-align: center;
         margin: auto;
     }
-
     .btn-group {
         display: flex;
         justify-content: center;
     }
-
     .row .main {
+        width: 100%;
         display: flex;
         flex-direction: column;
     }
-
+    .side-img,.side-text {
+        width: 100%;
+    }
     h1 {
         font-size: 38px;
     }
-
     h2 {
         font-size: 30px;
     }
-
     h3 {
         font-size: 22px;
     }
-
     p {
         font-size: 20px;
     }
-
     span {
         font-size: 48px;
     }
-
     .container {
+        width: 100%;
         text-align: center;
     }
-
     .row .reverse {
         display: flex;
         flex-direction: column-reverse;
     }
     .row-2 {
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: center;
     }
     .col {
-        width: 95%;
+        width: 100%;
+        padding: 30px;
     }
     .card {
         width: 100%;
+        padding: 0;
     }
-
+    .card-body {
+        padding: 10px;
+        width: 100%;
+    }
     footer {
         width: 100%;
         display: flex;
@@ -307,7 +304,7 @@ h3 {
         font-size: 20px;
     }
     h1 {
-        font-size: 32px;
+        font-size: 28px;
     }
     h2 {
         font-size: 20px;
