--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,10 @@ h3 {
     span {
         font-size: 32px;
     }
+    .btn-group {
+        display: flex;
+        flex-direction: column;
+    }
     .content .banner img {
         width: 100%;
         text-align: center;
