--- a/css/main.css
+++ b/css/main.css
@@ -83,12 +83,22 @@ span {
     margin-top: 30px;
 }
 
-h1 {
-    color: #F61D1D;
-    font-size: 48px;
-    padding: 10px;
-    margin-top: 40px;
+h1,h2,h3 {
     text-align: center;
+    padding: 10px;
+    color: #F61D1D;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    font-size: 36px;
+}
+
+h3 {
+    font-size: 22px;
 }
 /* end content */
 
@@ -164,14 +174,6 @@ i {
     padding: 10px;
 }
 
-h2 {
-    padding: 10px;
-    text-align: center;
-    color: #F61D1D;
-    font-size: 40px;
-    margin-bottom: 30px;
-}
-
 .side-text p {
     text-align: left;
     line-height: 1.8;
@@ -200,13 +202,66 @@ h2 {
     border-radius: 20px 20px 0 0;
 }
 
-h3 {
-    text-align: center;
-    padding: 10px;
-    color: #F61D1D;
-    font-size: 22px;
+.ml-10 {
+    margin-left: 10px;
 }
 
+.main-content {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.form-container, .location {
+    width: 45%;
+    height: 100%;
+}
+
+.form-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.no-pd {
+    padding: 0;
+}
+
+.c-2 {
+    display: flex;
+    flex-direction: row;
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px;
+    border-radius: 9px;
+    resize: none;
+    outline: none;
+    border: none;
+}
+
+form {
+    background: #039BE5;
+    padding: 20px;
+    border-radius: 15px;
+}
+label {
+    font-size: 18px;
+}
+
+.submit {
+    cursor: pointer;
+    background-color: #F61D1D;
+    color: #fff;
+}
+
+iframe {
+    width: 100%;
+}
 /* Template */
 @media screen and (max-width:1024px) {
     .content {
@@ -277,6 +332,17 @@ h3 {
     }
     .card-body p {
         text-align: left;
+    }
+    .main-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        padding: 20px;
+    }
+    .form-container,.location {
+        width: 100%;
     }
     footer {
         width: 100%;
