--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,7 @@ iframe {
     }
     .form-container,.location {
         width: 100%;
+        padding: 10px;
     }
     footer {
         width: 100%;
@@ -408,5 +409,13 @@ iframe {
     .row .reverse {
         display: flex;
         flex-direction: column-reverse;
+    }
+    .c-2 {
+        display: flex;
+        flex-direction: column;
+    }
+    .ml-10 {
+        margin-left: 0px;
+        padding: 10px 0;
     }
 }
